# openzim-mcp

./: .dockerignore  .flake8  .gitattributes  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2026-06-10.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_REVIEW_SUMMARY.md  DEPLOYMENT_STEPS.sh  DEPLOYMENT_SUCCESS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PR31_FINAL_SUMMARY.md  PR_DESCRIPTION.md  PR_REVIEW_COMPLETE.md  PR_REVIEW_FIXES.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  glama.json  llm.txt  openzim_mcp-0.6.2-py3-none-any.whl  pyproject.toml  release-please-config.json  server.json  sonar-project.properties  test_commit.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  infrastructure_improvement.yml  security_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  dependency-update.yml  deploy-website.yml  docker-publish.yml  manual-release.yml  notification-control.yml  performance.yml  release-please.yml  release.yml  tag-release.yml  test.yml
docs/: AUTOMATED_VERSIONING.md  BRANCH_PROTECTION.md  DEPLOYMENT_GUIDE.md  HTTP_DEPLOYMENT_GUIDE.md  INFRASTRUCTURE_SUMMARY.md  LLM.md  RELEASE_PROCESS_GUIDE.md  RELEASE_TROUBLESHOOTING.md  REPOSITORY_SETUP.md  SIMPLE_MODE_GUIDE.md  TESTING.md  deployment.md  distribution.md  extras-reranker.md  roadmap.md
docs/plans/: 2026-05-27-docs-consolidation.md
docs/specs/: 2026-05-27-docs-consolidation-design.md  2026-06-04-v2.5-archive-type-presets-design.md  2026-06-08-v2.5-build-cli-finer-errors-design.md  2026-06-08-v2.5-link-graph-design.md  2026-06-08-v2.5-zim-get-section-raw-text-design.md  2026-06-09-v2.5-dispatch-eval-either-acceptable-design.md  2026-06-09-v2.5-linkgraph-sidecar-v2-design.md
docs/v2/: README.md  adr-001-compact-plumbing.md  extras-reranker.md
docs/v2.5/: README.md
openzim_mcp/: __init__.py  archive_types.py  article_body.py  async_operations.py  bundle.py  cache.py  chain_detection.py  compact_format.py  compact_renderers.py  config.py  constants.py  content_processor.py  cursor_decode.py  defaults.py  disambiguation.py  error_messages.py  exceptions.py  http_app.py  instance_tracker.py  intent_parser.py  main.py  meta.py  pagination.py  preset_data.py  query_rewrite_data.py  rate_limiter.py  request_context.py  rerank.py  responses.py  security.py  server.py  server_state.py  simple_tools.py  subject_section.py  subscriptions.py  synthesize.py  text_utils.py  timeout_utils.py  title_promotion.py  tool_schemas.py  (+3 more)
openzim_mcp/cli/: __init__.py  build.py
openzim_mcp/data/: __init__.py  misspellings.txt  misspellings_exclusions.txt  presets.toml
openzim_mcp/linkgraph/: __init__.py  builder.py  reader.py  schema.py
openzim_mcp/ml/: __init__.py  fallback.py  reranker.py
openzim_mcp/tools/: __init__.py  _common.py  content_tools.py  file_tools.py  metadata_tools.py  navigation_tools.py  prompts.py  resource_tools.py  search_tools.py  server_tools.py  structure_tools.py  zim_browse.py  zim_browse_description.md  zim_get.py  zim_get_description.md  zim_get_section.py  zim_get_section_description.md  zim_health.py  zim_health_description.md  zim_links.py  zim_links_description.md  zim_metadata.py  zim_metadata_description.md  zim_query.py  zim_query_description.md  zim_search.py  zim_search_description.md
openzim_mcp/zim/: __init__.py  _ops_base.py  archive.py  content.py  namespace.py  redirects.py  search.py  structure.py
packaging/mcpb/: manifest.json
scripts/: build_mcpb.py  check_tools.py  clean.py  clean_test_data.py  download_test_data.py  generate_help.py  run_server.py  run_with_env.py  setup_dev_env.py
tests/: __init__.py  _promote_fixtures.py  conftest.py  conftest_v2_fixtures.py  test_archive_type_presets_wiring.py  test_archive_types.py  test_async_operations.py  test_async_operations_combined.py  test_batch_get_entries.py  test_beta_sweep_chrome_fixes.py  test_body_size_reconciliation.py  test_browse_namespace_d11_v2a9.py  test_browse_w_namespace_v2a9.py  test_bundle.py  test_cache.py  test_cache_control.py  test_cache_invalidation_on_file_changes.py  test_canonical_splice_characterization.py  test_code_review_phase10.py  test_code_review_phase11.py  test_code_review_phase2.py  test_code_review_phase3.py  test_code_review_phase4.py  test_code_review_phase5.py  test_code_review_phase6.py  test_code_review_phase7.py  test_code_review_phase8.py  test_code_review_phase9.py  test_config.py  test_constants_reexport.py  test_content_offset_clamp.py  test_content_processor.py  test_content_processor_fixes_v2a7.py  test_content_processor_infobox.py  test_content_processor_tables.py  test_content_tools.py  test_create_snippet_query_aware.py  test_cursor_decode.py  test_defaults.py  test_diagnostics.py  (+144 more)
tests/dispatch_eval/: analyze.py  check_probe_coverage.py  check_transport.py  gate_0_1_emission_spike.md  gate_0_1_emission_spike.py  gate_0b_decision.json  inference_setup.md  oneof_parse_benchmark.jsonl  oneof_parse_benchmark.md  oneof_parse_benchmark.py  probes.jsonl  prototype_schema_snapshot.json  runner.py  system_prompt.md  test_analyze.py  test_auto_select_extraction_parity.py  test_preprocessing_extraction_parity.py  test_promotion_extraction_parity.py  transport_oneof_verification.md
tests/golden/: compact_einstein.txt  compact_long_article.txt  compact_multitable.txt  compact_plain.txt
tests/linkgraph/: __init__.py  test_build_cli.py  test_builder.py  (+4 more)
website/: IMPROVEMENTS.md  astro.config.mjs  humans.txt  index.html  llm.txt  llms.txt  package-lock.json  package.json  robots.txt  sitemap.xml  validate.py
wiki-content/: API-Reference.md  Architecture-Overview.md  Configuration-Guide.md  FAQ.md  Home.md  Installation-Guide.md  LLM-Integration-Patterns.md  Multi-Instance-Management-Guide.md  Performance-Optimization-Guide.md  Quick-Start-Tutorial.md  Release-System-Guide.md  Security-Best-Practices.md  Smart-Retrieval-System-Guide.md  Troubleshooting-Guide.md
(+122 files in other folders)
