[project]
name = "openzim-mcp"
version = "2.2.0"
description = "OpenZIM MCP - ZIM MCP Server that enables AI models to access and search ZIM format knowledge bases offline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Cameron Rye", email = "c@meron.io"},
]
maintainers = [
    {name = "Cameron Rye", email = "c@meron.io"},
]
keywords = [
    "zim",
    "openzim",
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "knowledge-base",
    "offline",
    "wikipedia",
    "search",
    "libzim",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Database",
    "Typing :: Typed",
]
# M30: dependency upper bounds. The MCP SDK and Pydantic ship fast and have
# repeatedly carried breaking changes across minor versions; cap each at the
# next major so a fresh ``pip install openzim-mcp`` can't silently land on a
# wheel-incompatible upstream. ``libzim`` is similarly tightly coupled to the
# Python binding ABI. tiktoken caps a major because its BPE table updates
# have shipped breaking changes across minors in the past. Beautifulsoup
# stays unpinned-upward (very stable surface).
dependencies = [
    "beautifulsoup4>=4.14.3,<5.0",
    "html2text>=2025.4.15,<2027.0",
    "libzim>=3.9.0,<4.0",
    "mcp[cli]>=1.27.0,<2.0",
    "pydantic>=2.13.3,<3.0",
    "pydantic-settings>=2.14.0,<3.0",
    "tiktoken>=0.7.0,<1.0",
]

[project.optional-dependencies]
# Phase D sub-D-1: cross-encoder reranker via FastEmbed (ONNX-backed,
# no torch dependency). Adds ~150 MB install footprint. Lazy-imported
# inside openzim_mcp.ml.reranker; default install is unaffected.
reranker = [
    "fastembed>=0.4.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/cameronrye/openzim-mcp"
Repository = "https://github.com/cameronrye/openzim-mcp.git"
Issues = "https://github.com/cameronrye/openzim-mcp/issues"
Changelog = "https://github.com/cameronrye/openzim-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/cameronrye/openzim-mcp#readme"
"Security Policy" = "https://github.com/cameronrye/openzim-mcp/blob/main/SECURITY.md"
"Contributing" = "https://github.com/cameronrye/openzim-mcp/blob/main/CONTRIBUTING.md"

[project.scripts]
openzim-mcp = "openzim_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openzim_mcp*"]

[tool.setuptools.package-data]
openzim_mcp = ["data/*.txt", "data/*.toml", "tools/*.md"]

[tool.uv]
# pyjwt is pulled in transitively via mcp[cli] (which depends on pyjwt[crypto]).
# Floor it at 2.13.0 so the release pip-audit gate stays clear of
# PYSEC-2026-175 / -177 / -178 / -179 — four advisories against pyjwt 2.12.1,
# all fixed in 2.13.0. mcp itself sets no upper bound, so this only raises the
# floor. Drop this constraint once mcp's own pin guarantees >= 2.13.0.
#
# pip is pulled in transitively via pip-api (a pip-audit dependency); it is a
# dev/tooling artifact, not a runtime dependency. Floor it at 26.1.2 so the
# release pip-audit gate stays clear of PYSEC-2026-196 (an advisory against
# pip 26.1, fixed in 26.1.2). Drop this constraint once pip-api's own pin
# guarantees a patched pip.
constraint-dependencies = ["pyjwt>=2.13.0", "pip>=26.1.2"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88



[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=openzim_mcp --cov-report=html --cov-report=term-missing --cov-report=xml -m 'not live'"

[tool.coverage.run]
source = ["openzim_mcp"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
    "bandit[toml]>=1.9.4",
    "pip-audit>=2.10.0",
]

[tool.bandit]
exclude_dirs = ["tests", "test_data", "scripts"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
